--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^19.4.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
