--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^19.4.0
+  flutter_timezone: ^4.1.1
   permission_handler: ^12.0.1
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
